--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -4,12 +4,13 @@
 
 #hero {
   width:100%;
-  height: 600px;
+  height: 500px;
   /* border: 1px solid cyan; */
   text-align: center;
   position: relative;
   background-size: cover;
   /* z-index: 1; */
+  margin-top: 13rem;
 }
 
 #hero-background{
@@ -36,13 +37,19 @@
   opacity: 0.3;
 }
 #header {
-  height: 100px;
+  height: 71px;
   /* border: 0.001px solid red; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #100f17;
+  z-index: 1;
+  padding: 0 2rem;
 }
 
 #logo {
@@ -73,26 +80,20 @@
 }
 
 a {
-  margin-left: 30px;
-  padding: 15px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   border: none;
   cursor: pointer;
-  transition: border 1.5s ease;
 }
 
+#header a {
+  color: #ffffff;
+  margin-left: 30px;
+  padding: 27px 16px;
+}
 #link-containers a:hover {
-  border: 1px solid #ffffff;
-  border-radius: 30px;
-  /* transition: border 1.5s ease; */
+  border-bottom: 1px solid;
 }
-
-#link-containers a{
-  border: 1px solid #100f17;
-  border-radius: 30px;
-}
-
 
 #header-text-first {
   margin-top: 90px;
@@ -136,6 +137,7 @@ button#explore {
   height: 50px;
   margin-right: 20px;
   border-radius: 30px;
+  font-size: 21px;
   border: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -162,6 +164,7 @@ button#create {
   height: 50px;
   margin-left: 20px;
   border-radius: 30px;
+  font-size: 21px;
   border: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -171,7 +174,11 @@ button#create {
   font-weight: 600;
   color: #ffffff;
   cursor: pointer;
-  
+
+}
+
+button#create:hover,button#eplore:hover{
+  box-shadow: 0 2px 10px 0;
 }
 
 
@@ -194,13 +201,19 @@ button#create {
   }
 
   #header {
-    
-    height: 100px;
+    height: 64px;
     /* border: 0.001px solid red; */
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #100f17;
+    z-index: 1;
+    padding: 0 2rem;
   }
 
   #header-text-first {
